# TokenFoundry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: deploy-hub.yml
apim/policies/: llm-inbound.xml  log-to-eventhub.xml  outbound-cosmos-write.xml
app/: __init__.py  config.py  db.py  init_db.py  main.py
app/api/: __init__.py  auth.py  budgets.py  deploy_config.py  github_accounts.py  keys.py  login.py  routes.py  tenants.py  usage.py  users.py
app/models/: __init__.py  enums.py  orm.py  schemas.py
app/services/: __init__.py  apim_provisioner.py  billing.py  budget_enforcer.py  copilot_device.py  (+6 more)
docs/: APIM-LLM-Gateway.md  DEPLOYMENT.md  DEPLOYMENT.zh.md  PRICING.md  PRICING.zh.md  SECURITY.md  SECURITY.zh.md  architecture.md  architecture.zh.md  customMetrics-diagnostic-troubleshooting.md
infra/: main.bicep  main.bicepparam  main.lite.bicep
portal/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: apim_azure_pool_session_cache_test.py  apim_cache_test_providers.py  apim_pool_session_cache_test.py  azure_cache_test.py  bootstrap.sh  create-deployer-sp.sh  deploy.sh  hub_cache_test.py  register_hub_models.py  setup-github-deploy.sh  smoke_test_models.py  update-app.sh
terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_apim_policy.py  test_billing.py  test_github_repo.py  test_key_limits.py  test_usage_parse.py
worker/: __init__.py  eventhub_consumer.py
(+64 files in other folders)
