[project]
name = "token-foundry"
version = "0.1.0"
description = "Token Foundry — Azure-native LLM token hub / AI gateway control plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "azure-identity>=1.19",
    "azure-mgmt-apimanagement>=4.0",
    "azure-keyvault-secrets>=4.9",
    "azure-storage-blob>=12.20",
    "azure-cosmos>=4.7",
    "azure-monitor-query>=1.4",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI idiomatically calls Depends()/Header() in argument defaults.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# apim_provisioner embeds APIM policy XML as multi-line string literals (URLs and
# C# policy expressions). Those lines can't be wrapped without breaking the policy
# semantics, so E501 (line length) is waived for this file only.
"app/services/apim_provisioner.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
